# Stock-Alerts

./: .gitignore  Cargo.toml  README.md  lambda_function.py  requirements.txt
.github/workflows/: deploy.yml  lambdabuild.yml
local/yahoo-finance/: Cargo.toml
local/yahoo-finance/src/yahoo/: realtime.rs
src/: main.py  main.rs
tests/: test.py  test.rs
