[package]
name = "stockalerts"
version = "0.1.0"
edition = "2021"

[lib]
name = "stockalerts"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.8" 
tokio = { version = "1.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11",default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"

futures = "0.3"
yahoo_finance_api = "3.0.0"
tokio-test = "0.4.4"
#openssl = { version = "0.10.35", features = ["vendored"] }